--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,15 +7,27 @@ VAGRANT_NODES = {
 }
 
 # Easy loop to create the vms with ubuntu images, the right name and k3s installed.
-VAGRANT_NODES.each do |name, ip|
-  Vagrant.configure("2") do |config|
+
+Vagrant.configure("2") do |config|
+  VAGRANT_NODES.each do |name, ip|
     config.vm.define name do |node|
       node.vm.box = "bento/ubuntu-24.04"
       node.vm.hostname = name
       node.vm.network "private_network", ip: ip
+
+      # We make a shared folder to pull kubeconfig files to the host
+      node.vm.synced_folder "./kubeconfigs", "/vagrant/kubeconfigs"
+
       node.vm.provision "shell", inline: <<-SHELL
         sudo apt update
-        curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644
+        curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644 --tls-san #{ip}
+
+        # We copy the kubeconfig files on the host, we will use those with tf to deploy the infra
+        if [ -f /etc/rancher/k3s/k3s.yaml ]; then
+          sudo sed -i 's|https://127.0.0.1:6443|https://#{ip}:6443|' /etc/rancher/k3s/k3s.yaml
+          sudo cp /etc/rancher/k3s/k3s.yaml /vagrant/kubeconfigs/kubeconfig-#{name}.yaml
+          sudo chown vagrant:vagrant /vagrant/kubeconfigs/kubeconfig-#{name}.yaml
+        fi
       SHELL
     end
   end
