--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
       node.vm.network "private_network", ip: ip
 
       # We make a shared folder to pull kubeconfig files to the host
-      node.vm.synced_folder "./kubeconfigs", "/vagrant/kubeconfigs"
+      node.vm.synced_folder "../terraform/kubeconfigs", "/vagrant/kubeconfigs"
 
       node.vm.provision "shell", inline: <<-SHELL
         sudo apt update
