fix: use the right image
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/terraform/modules/api-deployment/helm/values.yaml
+++ b/terraform/modules/api-deployment/helm/values.yaml
@@ -7,9 +7,9 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: traefik/whoami
+  repository: ghcr.io/thomas-mauran/api
   # This sets the pull policy for images.
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
