--- a/terraform/modules/api-deployment/helm/templates/ingress.yaml
+++ b/terraform/modules/api-deployment/helm/templates/ingress.yaml
@@ -1,9 +1,10 @@
 {{- if .Values.ingress.enabled -}}
 {{- if eq .Values.ingress.className "traefik" -}}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: {{ include "api.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "api.labels" . | nindent 4 }}
 spec:
@@ -22,9 +23,10 @@ spec:
   tls:
     passthrough: true  # Since the go api is already handling https we need to do so to use traefik as just a reverse proxy without tls
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: ServersTransport
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: api-transport
 spec:
   insecureSkipVerify: true
