--- a/terraform/modules/lb-deployment/helm/values.yaml
+++ b/terraform/modules/lb-deployment/helm/values.yaml
@@ -9,10 +9,24 @@ experimental:
       moduleName: github.com/thiagotognoli/traefikgeoip
       version: v0.22.0
 
+ingressRoute:
+  dashboard:
+    enabled: true
+
 deployment:
   additionalVolumes:
     - name: geoip2
       emptyDir: {}
+  hostAliases:
+  - ip: "192.168.56.10"
+    hostnames:
+    - "api.us"
+  - ip: "192.168.56.11"
+    hostnames:
+    - "api.eu"
+  - ip: "192.168.56.12"
+    hostnames:
+    - "api.lb"
 
   initContainers:
     - name: download
@@ -28,3 +42,11 @@ deployment:
   additionalVolumeMounts:
     - name: geoip2
       mountPath: /geoip2
+
+logs:
+  general:
+    # -- Set [logs format](https://doc.traefik.io/traefik/observability/logs/#format)
+    format:  # @schema enum:["common", "json", null]; type:[string, null]; default: "common"
+    # By default, the level is set to INFO.
+    # -- Alternative logging levels are TRACE, DEBUG, INFO, WARN, ERROR, FATAL, and PANIC.
+    level: "TRACE"  # @schema enum:[TRACE,DEBUG,INFO,WARN,ERROR,FATAL,PANIC]; default: "INFO"
