--- a/terraform/modules/lb-deployment/helm/external-eu-service.yaml
+++ b/terraform/modules/lb-deployment/helm/external-eu-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: us-remote-service
+  name: eu-remote-service
   namespace: default
 spec:
   type: ExternalName
-  externalName: api.us
+  externalName: api.eu
   ports:
     - port: 443
       targetPort: 443
