fix: working geoip plugin the plugin is working fine, but still has country not found with some ips
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/terraform/modules/lb-deployment/helm/geoip-middleware.yaml
+++ b/terraform/modules/lb-deployment/helm/geoip-middleware.yaml
@@ -1,13 +1,12 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: geoip
+  name: geoip2
   namespace: default
 spec:
   plugin:
     geoip2:
-      dbPath: "/geoip2/GeoLite2-City.mmdb"
-      addCountryHeader: true
-      addContinentHeader: true
-      addRegionHeader: true
-      addCityHeader: true
+      dbPath: "/geoip2/GeoLite2-Country.mmdb"   
+      countryDbPath: "/geoip2/GeoLite2-Country.mmdb"
+      ipHeader: "X-Real-Ip"
+      debug: true
