--- a/terraform/modules/lb-deployment/helm/values.yaml
+++ b/terraform/modules/lb-deployment/helm/values.yaml
@@ -40,7 +40,8 @@ deployment:
         - -ce
         - |
           mkdir -p /geoip2 && \
-          wget -O /geoip2/GeoLite2-Country.mmdb https://git.io/GeoLite2-Country.mmdb
+          wget -O /geoip2/GeoLite2-City.mmdb https://github.com/P3TERX/GeoLite.mmdb/raw/download/GeoLite2-City.mmdb
+
 additionalVolumeMounts:
   - name: geoip2
     mountPath: /geoip2
@@ -52,3 +53,13 @@ logs:
     # By default, the level is set to INFO.
     # -- Alternative logging levels are TRACE, DEBUG, INFO, WARN, ERROR, FATAL, and PANIC.
     level: "TRACE"  # @schema enum:[TRACE,DEBUG,INFO,WARN,ERROR,FATAL,PANIC]; default: "INFO"
+
+ports:
+  websecure:
+    forwardedHeaders:
+      trustedIPs:
+        - "0.0.0.0/0"
+  web:
+    forwardedHeaders:
+      trustedIPs:
+        - "0.0.0.0/0"
