--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -15,35 +15,70 @@ Vagrant.configure("2") do |config|
       node.vm.synced_folder "../terraform/kubeconfigs", "/vagrant/kubeconfigs"
 
       node.vm.provision "shell", inline: <<-SHELL
-        sudo apt update -y
+      sudo apt update -y
 
-        if [ "#{name}" != "vm-lb" ]; then
-          CN=""
-          case "#{name}" in
-            "vm-us")
-              CN="api.us"
-              ;;
-            "vm-eu")
-              CN="api.eu"
-              ;;
-          esac
+      if [ "#{name}" != "vm-lb" ]; then
+        CN=""
+        case "#{name}" in
+          "vm-us")
+            CN="api.us"
+            ;;
+          "vm-eu")
+            CN="api.eu"
+            ;;
+        esac
 
-          sudo mkdir -p /mnt/data
-          sudo openssl req -x509 -nodes -days 365 \
-            -newkey rsa:2048 \
-            -keyout /mnt/data/key.pem \
-            -out /mnt/data/cert.pem \
-            -subj "/CN=${CN}/O=DevOrg"
-        fi
+        sudo mkdir -p /mnt/data
+        
+        # Create OpenSSL config file with SAN extension
+        cat > /tmp/cert.conf <<EOF
+[req]
+distinguished_name = req_distinguished_name
+req_extensions = v3_req
+prompt = no
 
+[req_distinguished_name]
+CN = ${CN}
+O = DevOrg
+
+[v3_req]
+keyUsage = keyEncipherment, dataEncipherment
+extendedKeyUsage = serverAuth
+subjectAltName = @alt_names
+
+[alt_names]
+DNS.1 = ${CN}
+IP.1 = #{ip}
+EOF
+
+        # Generate certificate with both DNS and IP SAN
+        sudo openssl req -x509 -nodes -days 365 \
+          -newkey rsa:2048 \
+          -keyout /mnt/data/key.pem \
+          -out /mnt/data/cert.pem \
+          -config /tmp/cert.conf \
+          -extensions v3_req
+        
+        # Clean up config file
+        rm /tmp/cert.conf
+        
+        # Install k3s normally on regional clusters
         curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644 --tls-san #{ip}
+      else
+        curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable traefik" sh -s - --write-kubeconfig-mode 644 --tls-san #{ip}
+        # Install Traefik Resource Definitions:
+        kubectl apply -f https://raw.githubusercontent.com/traefik/traefik/v3.4/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
 
-        if [ -f /etc/rancher/k3s/k3s.yaml ]; then
-          sudo sed -i 's|https://127.0.0.1:6443|https://#{ip}:6443|' /etc/rancher/k3s/k3s.yaml
-          sudo cp /etc/rancher/k3s/k3s.yaml /vagrant/kubeconfigs/kubeconfig-#{name}.yaml
-          sudo chown vagrant:vagrant /vagrant/kubeconfigs/kubeconfig-#{name}.yaml
-        fi
-      SHELL
+        # Install RBAC for Traefik:
+        kubectl apply -f https://raw.githubusercontent.com/traefik/traefik/v3.4/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
+      fi
+
+      if [ -f /etc/rancher/k3s/k3s.yaml ]; then
+        sudo sed -i 's|https://127.0.0.1:6443|https://#{ip}:6443|' /etc/rancher/k3s/k3s.yaml
+        sudo cp /etc/rancher/k3s/k3s.yaml /vagrant/kubeconfigs/kubeconfig-#{name}.yaml
+        sudo chown vagrant:vagrant /vagrant/kubeconfigs/kubeconfig-#{name}.yaml
+      fi
+    SHELL
     end
   end
 end
