--- a/terraform/modules/lb-deployment/helm/ingressroute-roundrobin.tpl.yaml
+++ b/terraform/modules/lb-deployment/helm/ingressroute-roundrobin.tpl.yaml
@@ -24,3 +24,5 @@ spec:
           serversTransport: api-transport
           weight: 1
           passHostHeader: false
+  # tls:
+  #   secretName: api-tls
