--- a/terraform/modules/lb-deployment/helm/external-service.tpl.yaml
+++ b/terraform/modules/lb-deployment/helm/external-service.tpl.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: us-remote-service
+  name: ${region}-remote-service
   namespace: default
 spec:
   type: ExternalName
-  externalName: api.us
+  externalName: ${url}
   ports:
     - port: 443
       targetPort: 443
