feat: azure deploy (#4)
* feat: azure init, creation of the vm and k3s install

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* feat: working api deployment

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* feat: working multiple regions and apis / lb deployments

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* chore: setup of cert manager

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* feat: everything working, azure local + doc

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

---------

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -1,5 +1,8 @@
+kubeconfigs/local/*.yaml
+kubeconfigs/azure/*.yaml
 kubeconfigs/*.yaml
 terraform.tfvars
 .terraform*
 terraform.tfstate
 terraform.tfstate.backup
+*.tfvars
