feat: add prometheus metrics to the app
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -25,4 +25,4 @@ COPY --from=builder /app/whoami .
 EXPOSE 80
 
 # Set the command
-CMD ["./whoami", "-port", "443"]
+CMD ["./whoami", "-port", "443", "-cert", "/cert/cert.pem", "-key", "/cert/key.pem"]
